# VEngine2D

./: .gitignore  Actor.cpp  Actor.h  ActorDB.cpp  ActorDB.h  AudioDB.cpp  AudioDB.h  BUILD_WEB_HTML.bat  BUILD_WEB_JS.bat  BUILD_WIN.bat  CLEAN_ALL.bat  CMakeLists.txt  CMakePresets.json  Component.cpp  Component.h  ComponentDB.cpp  ComponentDB.h  Engine.cpp  Engine.h  Image.h  ImageDB.cpp  ImageDB.h  InputManager.cpp  InputManager.h  JsonParser.h  Makefile  ParticleSystem.cpp  ParticleSystem.h  README.md  Renderer.cpp  Renderer.h  Rigidbody.cpp  Rigidbody.h  Scene.h  ScriptBindings.cpp  ScriptBindings.h  TextDB.cpp  TextDB.h  Utils.h  game_engine.sln  (+3 more)
demo games/Physics Obstacle Course/resources/actor_templates/: VictoryBox.template
demo games/Rift Bound Signal/resources/: game.config  rendering.config
demo games/Rift Bound Signal/resources/component_types/: GameDirector.lua
demo games/Rift Bound Signal/resources/scenes/: riftbound.scene
docs/: VEngine2D Documentation.md
game_engine.xcodeproj/: project.pbxproj
